objects/Tier_Hierarchy__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For ordering tiers in the relationship sidebar</description>
    <fields>
        <fullName>X1__c</fullName>
        <label>1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <label>3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tier Hierarchy</label>
</CustomObject>